--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wineries-niaraga-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
